HelloUltraviolet/Fixtures/RejectedSource/Patterns/ParsePatternError/Source/Main.uv
//! Rejected pattern specimen for an invalid pattern start in a binding.

public procedure parsePatternErrorReference() -> i32 {
    let + = 1
    return 0
}
